k8s/cluster/misc/argocd-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  # Allow antoine big oidc energy
  annotations:
    cert-manager.io/cluster-issuer: default-issuer
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    cert-manager.io/revision-history-limit: "1"
spec:
  ingressClassName: public
  tls:
    - hosts: ["argocd.k8s.gastbob40.com"]
      secretName: argocd-server-ingress-tls
  rules:
    - host: argocd.k8s.gastbob40.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
